--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,16 @@
 spring.application.name=auth-jwt-demo
-
-# Conexión a MySQL en Railway usando variables de entorno
-spring.datasource.url=jdbc:mysql://${HOST_MYSQL}:${MYSQLPORT}/${BASE_DE_DATOS_MYSQL}
-spring.datasource.username=${USUARIO_MYSQL}
-spring.datasource.password=${CONTRASEÑA_MYSQL}
-
+spring.datasource.url=jdbc:mysql://localhost:3306/reservasdb
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-# OAuth Google
-spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
-spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.client-id=TU_CLIENT_ID
+spring.security.oauth2.client.registration.google.client-secret=TU_CLIENT_SECRET
 spring.security.oauth2.client.registration.google.scope=email,profile
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.google.client-name=Google
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
 spring.security.oauth2.client.provider.google.token-uri=https://www.googleapis.com/oauth2/v4/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
-
-# Mercado Pago
-mercadopago.access.token=${MP_ACCESS_TOKEN}
+mercadopago.access.token=TEST-320296471233317-081122-b4ad40583bb1564c09da42049eb68675-1169757677
