--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=reservas-app
 
-spring.datasource.url=jdbc:mysql://localhost:3306/reservasdb
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-mercadopago.access.token=TEST-320296471233317-081122-b4ad40583bb1564c09da42049eb68675-1169757677
+mercadopago.access.token=${MP_ACCESS_TOKEN}
 
-server.port=8080
+server.port=${PORT:8080}
