--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,37 @@
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+# ======================
+# PUERTO DEL SERVIDOR
+# ======================
+server.port=${PORT:8080}
+
+# ======================
+# DATOS DE LA BASE DE DATOS (MySQL Railway)
+# ======================
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=RNyTNOAotoDTfQFWdVlNszZxTYNlllrD
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# HikariCP (pool de conexiones)
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
+
+# ======================
+# JPA / HIBERNATE
+# ======================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-mercadopago.access.token=${MP_ACCESS_TOKEN}
+# ======================
+# TOKEN MERCADOPAGO (modo TEST)
+# ======================
+mercadopago.access-token=TEST-320296471233317-081122-b4ad40583bb1564c09da42049eb68675-1169757677
 
-server.port=${PORT:8080}
+# ======================
+# CONFIGURACIÓN ADICIONAL
+# ======================
+spring.main.allow-bean-definition-overriding=true
+spring.jackson.serialization.fail-on-empty-beans=false
