--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
- PUERTO DEL SERVIDOR
-
 server.port=${PORT:8080}
 
-spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=RNyTNOAotoDTfQFWdVlNszZxTYNlllrD
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.datasource.hikari.maximum-pool-size=10
@@ -13,14 +11,11 @@ spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.max-lifetime=1800000
 
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-
-mercadopago.access-token=TEST-320296471233317-081122-b4ad40583bb1564c09da42049eb68675-1169757677
-
+mercadopago.access-token=${MP_ACCESS_TOKEN}
 
 spring.main.allow-bean-definition-overriding=true
 spring.jackson.serialization.fail-on-empty-beans=false
